--- a/index.html
+++ b/index.html
@@ -3,79 +3,215 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🌱 Smart Garden Dashboard</title>
+<title>🌱 IoT Smart Garden Dashboard</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
 body { background: #f5f7fa; font-family: 'Segoe UI', sans-serif; }
 .card { border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.12); margin-bottom: 20px; text-align:center; padding:20px;}
-.sensor-value { font-size: 1.8rem; font-weight: bold; margin-top:10px; }
+.sensor-value { font-size: 2rem; font-weight: bold; margin-top:10px; }
+.gradient-card { background: linear-gradient(135deg,#6dd5ed,#2193b0); color:#fff; }
+.gradient-card2 { background: linear-gradient(135deg,#f093fb,#f5576c); color:#fff; }
+.gradient-card3 { background: linear-gradient(135deg,#43e97b,#38f9d7); color:#fff; }
 </style>
 </head>
 <body>
 <div class="container py-4">
-<h1 class="fw-bold text-center mb-4">🌱 IoT Smart Garden</h1>
+<h1 class="fw-bold text-center mb-4">🌱 IoT Smart Garden Dashboard</h1>
+
+<!-- Dữ liệu cảm biến -->
+<div class="row g-3 mb-3">
+  <div class="col-md-4"><div class="card gradient-card"><div>🌿 Độ ẩm đất</div><div class="sensor-value" id="soil">- %</div></div></div>
+  <div class="col-md-4"><div class="card gradient-card2"><div>🌤 Nhiệt độ</div><div class="sensor-value" id="temp">- °C</div></div></div>
+  <div class="col-md-4"><div class="card gradient-card3"><div>💧 Độ ẩm KK</div><div class="sensor-value" id="hum">- %</div></div></div>
+</div>
 
 <div class="row g-3 mb-3">
-  <div class="col-md-4"><div class="card bg-info text-white"><div>🌿 Độ ẩm đất</div><div id="soil" class="sensor-value">- %</div></div></div>
-  <div class="col-md-4"><div class="card bg-warning text-white"><div>🌤 Nhiệt độ</div><div id="temp" class="sensor-value">- °C</div></div></div>
-  <div class="col-md-4"><div class="card bg-success text-white"><div>💧 Độ ẩm KK</div><div id="hum" class="sensor-value">- %</div></div></div>
+  <div class="col-md-3"><div class="card"><div>Chế độ hiện tại</div><div class="sensor-value" id="currentMode">-</div></div></div>
+  <div class="col-md-3"><div class="card"><div>Bơm hiện tại</div><div class="sensor-value" id="pumpStatusText">-</div></div></div>
+  <div class="col-md-3"><div class="card"><div>📉 Min Threshold</div><div class="sensor-value" id="min_val">- %</div></div></div>
+  <div class="col-md-3"><div class="card"><div>📈 Max Threshold</div><div class="sensor-value" id="max_val">- %</div></div></div>
 </div>
 
-<div class="row g-3">
-  <div class="col-md-3"><div class="card"><div>Chế độ</div><div id="mode" class="sensor-value">-</div></div></div>
-  <div class="col-md-3"><div class="card"><div>Bơm</div><div id="pump" class="sensor-value">-</div></div></div>
-  <div class="col-md-3"><div class="card"><div>Công suất</div><div id="power" class="sensor-value">-</div></div></div>
-  <div class="col-md-3"><div class="card"><div>Lệnh ESP</div><div id="command" class="sensor-value small">-</div></div></div>
+<div class="row g-3 mb-3">
+  <div class="col-md-3"><div class="card"><div>🚿 Dòng chảy</div><div class="sensor-value" id="flow">-</div></div></div>
+  <div class="col-md-3"><div class="card"><div>⏱️ Thời gian tưới tiếp theo</div><div class="sensor-value" id="next_time">- phút</div></div></div>
 </div>
 
-<hr>
-<div class="row g-3">
+<!-- Điều khiển -->
+<div class="row g-3 mt-3">
   <div class="col-md-4">
-    <button id="btnPumpOn" class="btn btn-success w-100 py-3">🚿 BẬT BƠM</button>
-    <button id="btnPumpOff" class="btn btn-danger w-100 py-3 mt-2">🛑 TẮT BƠM</button>
+    <div class="card p-3 text-center">
+      <div>💡 Chọn chế độ</div>
+      <select id="modeSelect" class="form-select mt-2">
+        <option value="AUTO">AUTO</option>
+        <option value="MANUAL">MANUAL</option>
+        <option value="SCHEDULE">SCHEDULE</option>
+        <option value="SLEEP">SLEEP</option>
+      </select>
+      <button class="btn btn-primary mt-2" id="modeApply">Gửi lệnh</button>
+    </div>
   </div>
+
   <div class="col-md-4">
-    <select id="modeSelect" class="form-select mb-2">
-      <option>AUTO</option><option>MANUAL</option><option>SCHEDULE</option>
-    </select>
-    <button id="btnMode" class="btn btn-primary w-100 py-3">💡 ĐỔI CHẾ ĐỘ</button>
+    <div class="card p-3 text-center">
+      <div>🚰 Bật/Tắt bơm</div>
+      <div class="form-check form-switch d-flex justify-content-center mt-3">
+        <input class="form-check-input" type="checkbox" id="pumpSwitch" style="transform: scale(1.8); cursor:pointer;">
+      </div>
+    </div>
   </div>
+
   <div class="col-md-4">
-    <input type="range" min="0" max="100" id="pumpPower" class="form-range">
-    <div class="text-center mt-2" id="pumpPowerLabel">36%</div>
+    <div class="card p-3 text-center">
+      <div>⚡ Công suất bơm (%)</div>
+      <input type="range" class="form-range" min="0" max="100" step="1" id="pumpPower">
+      <span id="pumpPowerLabel">36%</span>
+    </div>
   </div>
 </div>
+
+<!-- Lịch tưới -->
+<div class="row g-3 mt-3">
+  <div class="col-md-12">
+    <div class="card p-3">
+      <h5>Lịch tưới</h5>
+      <div id="scheduleList" class="mb-2"></div>
+      <div class="input-group mb-2">
+        <input type="time" id="scheduleTime" class="form-control">
+        <button class="btn btn-primary" id="addScheduleBtn">Thêm lịch</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Lệnh chờ ESP -->
+<div class="row g-3 mt-3">
+  <div class="col-md-12">
+    <div class="card p-3">
+      <h5>Lệnh chờ ESP thực hiện</h5>
+      <div id="commandList">-</div>
+    </div>
+  </div>
+</div>
+
 </div>
 
 <script>
-const API = "https://iot-server-yc6r.onrender.com";
+const API_BASE = "https://iot-server-yc6r.onrender.com";
 
-// ========== CẬP NHẬT GIAO DIỆN ==========
-async function updateUI(){
-  const s = await fetch(API+'/api/status').then(r=>r.json());
-  document.getElementById('mode').textContent = s.mode ?? '-';
-  document.getElementById('pump').textContent = s.pump ? "BẬT" : "TẮT";
-  document.getElementById('power').textContent = (s.pump_power ?? 36) + "%";
-  const cmd = await fetch(API+'/api/command').then(r=>r.text());
-  document.getElementById('command').textContent = cmd || '-';
+// ======== Hàm update UI ========
+function updatePumpUI(pump){
+  pumpSwitch.checked = !!pump;
+  pumpStatusText.textContent = pump ? "BẬT" : "TẮT";
 }
-setInterval(updateUI,3000);
-updateUI();
+function updateScheduleUI(schedules){
+  const list = document.getElementById('scheduleList');
+  list.innerHTML = '';
+  schedules.forEach((t,i)=>{
+    const div = document.createElement('div');
+    div.className='d-flex justify-content-between align-items-center mb-1';
+    div.innerHTML = `<span>${t.hour.toString().padStart(2,'0')}:${t.minute.toString().padStart(2,'0')}</span>
+                     <button class="btn btn-sm btn-danger" onclick="removeSchedule(${i})">X</button>`;
+    list.appendChild(div);
+  });
+}
 
-// ========== NÚT BẬT / TẮT ==========
-document.getElementById('btnPumpOn').onclick = ()=> fetch(API+'/api/pump',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({state:true})});
-document.getElementById('btnPumpOff').onclick = ()=> fetch(API+'/api/pump',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({state:false})});
+// ======== FETCH STATUS ========
+async function fetchStatus(){
+  try{
+    const res = await fetch(`${API_BASE}/api/status`);
+    const status = await res.json();
+    document.getElementById('soil').textContent = status.soil ?? '- %';
+    document.getElementById('temp').textContent = status.temp ?? '- °C';
+    document.getElementById('hum').textContent = status.hum ?? '- %';
+    document.getElementById('flow').textContent = status.flow ?? '-';
+    document.getElementById('currentMode').textContent = status.mode ?? '-';
+    document.getElementById('min_val').textContent = status.min_val ?? '- %';
+    document.getElementById('max_val').textContent = status.max_val ?? '- %';
+    document.getElementById('next_time').textContent = status.next_time ?? '- phút';
+    document.getElementById('pumpPower').value = status.pump_power ?? 36;
+    document.getElementById('pumpPowerLabel').textContent = (status.pump_power ?? 36)+'%';
+    updatePumpUI(status.pump);
+    updateScheduleUI(Array.isArray(status.schedules)?status.schedules:[]);
+  }catch(e){ console.error(e); }
+}
 
-// ========== MODE ==========
-document.getElementById('btnMode').onclick = ()=>{
-  const m = document.getElementById('modeSelect').value;
-  fetch(API+'/api/mode',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:m})});
-};
+// ======== MODE ========
+document.getElementById('modeApply').addEventListener('click', async ()=>{
+  const mode = document.getElementById('modeSelect').value;
+  await fetch(`${API_BASE}/api/mode`,{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ mode })
+  });
+});
 
-// ========== POWER ==========
-const power = document.getElementById('pumpPower');
-power.oninput = ()=> document.getElementById('pumpPowerLabel').textContent = power.value + '%';
-power.onchange = ()=> fetch(API+'/api/power',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({power:+power.value})});
+// ======== PUMP ========
+pumpSwitch.addEventListener('change', async ()=>{
+  if(document.getElementById('currentMode').textContent!=='MANUAL'){
+    alert("Chỉ chế độ MANUAL mới bật/tắt bơm");
+    fetchStatus();
+    return;
+  }
+  const newState = pumpSwitch.checked;
+  pumpStatusText.textContent = newState ? "Đang bật..." : "Đang tắt...";
+  try{
+    const res = await fetch(`${API_BASE}/api/pump`,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({ pump: newState })
+    });
+    const data = await res.json();
+    if(data.status==='success') updatePumpUI(newState);
+    else throw new Error('Server error');
+  }catch(e){ console.error(e); fetchStatus(); }
+});
+
+// ======== PUMP POWER ========
+const pumpPowerInput = document.getElementById('pumpPower');
+pumpPowerInput.addEventListener('input',()=>{ document.getElementById('pumpPowerLabel').textContent = pumpPowerInput.value+'%'; });
+pumpPowerInput.addEventListener('change', async ()=>{
+  await fetch(`${API_BASE}/api/pump_power`,{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ pump_power: parseInt(pumpPowerInput.value) })
+  });
+});
+
+// ======== SCHEDULE ========
+document.getElementById('addScheduleBtn').addEventListener('click', async ()=>{
+  const val = document.getElementById('scheduleTime').value;
+  if(!val) return;
+  const [hour,minute] = val.split(':').map(Number);
+  await fetch(`${API_BASE}/api/schedule`,{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ add_schedule:{hour,minute} })
+  });
+  document.getElementById('scheduleTime').value='';
+});
+async function removeSchedule(index){
+  await fetch(`${API_BASE}/api/schedule`,{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ remove_schedule:index })
+  });
+}
+
+// ======== COMMAND LIST ========
+async function fetchCommand(){
+  try{
+    const res = await fetch(`${API_BASE}/api/command`);
+    const str = await res.text();
+    document.getElementById('commandList').textContent = str||'-';
+  }catch(e){ console.error(e); }
+}
+
+// ======== AUTO REFRESH ========
+setInterval(()=>{ fetchStatus(); fetchCommand(); }, 2000);
+fetchStatus();
+fetchCommand();
+
 </script>
 </body>
 </html>
